<resources>
    <string name="app_name">Fik Fish</string>
    <string name="let_s_start_with">Silahkan Mulai Dengan</string>
    <string name="login">Login!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password ?</string>
    <string name="i_don_t_have_an_account">Tidak Punya Akun ?</string>
    <string name="sign">Daftar</string>
    <string name="register">Register!</string>
    <string name="email">Email</string>
    <string name="nama">Nama Lengkap</string>
    <string name="already">Sudah Punya Akun?</string>
    <string name="login2">Login</string>
    <string name="recovery">Let\'s Recovery by</string>
    <string name="silahkan_tunggu">Silahkan Tunggu</string>
    <string name="home">Beranda</string>
    <string name="favorit">Favorit</string>
    <string name="transaksi">Transaksi</string>
    <string name="akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newest_product">Produk Terbaru</string>
    <string name="buy">Buy</string>
    <string name="email_genta">gentaprima600@gmail.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
</resources>