<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/selectot_tab_home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_like"
        android:title="@string/favorit"
        android:icon="@drawable/selectot_tab_like"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_transaksi"
        android:title="@string/transaksi"
        android:icon="@drawable/selectot_tab_transaksi"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_account"
        android:title="@string/akun"
        android:icon="@drawable/selectot_tab_user"
        app:showAsAction="ifRoom"
        />
</menu>