<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_activity"
            android:layout_marginTop="@dimen/margin_activity_big"
            android:layout_marginEnd="@dimen/margin_activity"
            android:fontFamily="@font/allerta"
            android:text="@string/let_s_start_with"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_activity"
            android:layout_marginEnd="@dimen/margin_activity"
            android:fontFamily="@font/allerta"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="@dimen/margin_activity"
            android:layout_marginEnd="@dimen/margin_activity"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="15dp"
            android:background="@color/colorWhite"
            app:cardElevation="0dp"
            android:layout_marginBottom="80dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_activity"
                    android:layout_marginStart="@dimen/margin_activity"
                    android:layout_marginEnd="@dimen/margin_activity"
                    android:id="@+id/edt_username"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:background="@drawable/bg_input"
                    android:hint="@string/username"
                    android:paddingLeft="@dimen/margin_activity"
                    android:paddingStart="@dimen/margin_activity" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_activity"
                    android:layout_marginStart="@dimen/margin_activity"
                    android:layout_marginEnd="@dimen/margin_activity"
                    android:id="@+id/edt_fullname"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:background="@drawable/bg_input"
                    android:hint="@string/nama"
                    android:paddingLeft="@dimen/margin_activity"
                    android:paddingStart="@dimen/margin_activity" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/margin_activity"
                    android:layout_marginTop="@dimen/margin_activity"
                    android:layout_marginEnd="@dimen/margin_activity"
                    android:background="@drawable/bg_input"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/margin_activity"
                    android:paddingLeft="@dimen/margin_activity"
                    tools:ignore="LabelFor,RtlSymmetry" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_activity"
                    android:layout_marginStart="@dimen/margin_activity"
                    android:layout_marginEnd="@dimen/margin_activity"
                    android:id="@+id/edt_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor"
                    android:background="@drawable/bg_input"
                    android:paddingLeft="@dimen/margin_activity"
                    android:paddingStart="@dimen/margin_activity"
                    android:hint="@string/password"
                    />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/margin_activity"
                    android:layout_marginEnd="@dimen/margin_activity"
                    android:layout_marginTop="@dimen/margin_activity"
                    android:text="Register"
                    tools:ignore="HardcodedText"
                    android:background="@drawable/bg_button"
                    android:textColor="@color/colorWhite"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_activity"
                android:layout_marginStart="@dimen/margin_activity"
                android:layout_marginEnd="@dimen/margin_activity"
                android:background="@drawable/container_card"
                >

                <TextView
                    android:id="@+id/idont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/already"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.518" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.081"
                    app:layout_constraintStart_toEndOf="@+id/idont"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>